2007-05-13  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-gconf.c: (awn_gconf_new):
	* src/awn-task.c: (_task_choose_custom_icon),
	(on_change_icon_clicked), (_task_show_prefs):
	* src/awn-x.c: (awn_x_get_icon_for_window):
	Brand new custom icon interface which actually works :).

2007-05-12  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-task-manager.c: (awn_task_manager_set_task_icon_by_xid),
	(awn_task_manager_unset_task_icon_by_xid),
	(awn_task_manager_set_progress_by_xid),
	(awn_task_manager_set_info_by_xid),
	(awn_task_manager_unset_info_by_xid):
	* src/awn-x.c: (awn_x_get_icon):
	* src/inlinepixbufs.h:
	Use own own default icons for windows without icon.

2007-05-12  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-task-manager.c:
	(awn_task_manager_add_task_menu_item_by_name),
	(awn_task_manager_add_task_check_item_by_name):
	* src/awn-task.c: (awn_task_button_press), (activate_window),
	(awn_task_add_menu_item), (awn_task_add_check_item),
	(awn_task_set_check_item):
	Merged patch by Ado Paps which tells wnck to raise the transient
	window rather than the main window when activating.

	* src/awn-task.h:
	* src/awn-utils.c: (_move_bar):
	(All)Merged a warnings patch by Gerd Kohlberger

2007-05-12  Neil J. Patel  <njpatel@gmail.com>

	* configure.in:
	Added Finish translation.

2007-05-12  Neil J. Patel  <njpatel@gmail.com>

	* intltool-extract.in:
	* intltool-merge.in:
	* intltool-update.in:
	* src/awn-bar.c: (awn_bar_init), (render),
	(awn_bar_set_draw_separator):
	* src/awn-bar.h:
	* src/awn-gconf.c: (awn_load_color):
	Merged a pacth by Diego Rivera which cleans up the GConf keys.

	* src/awn-task-manager.c:
	Merged a patch by Diego Rivera <diego@rivera.net> which takes a saner
	approach to separator drawing.
	* src/awn-window.c: (_on_expose):
	* src/main.c:

2007-03-22  Neil Jagdish Patel  <njpatel@gmail.com>

	* Added translations
	* Fixed some resizing issues

2007-03-21  Neil Jagdish Patel  <njpatel@gmail.com>
